docs(ERP-281): 폴더 정리 (#35)